--- a/src/css/universal.css
+++ b/src/css/universal.css
@@ -54,7 +54,7 @@ svg {
     color: var(--Branco);
 }
 
-/* CLASSES REUTILIZÁVEIS */
+/* CLASSES UNIVERSAIS */
 
 .title {
     font-size: 2.25rem;
@@ -66,6 +66,11 @@ svg {
     text-transform: capitalize;
     font-weight: bold;
     color: var(--Laranja);
+}
+
+.link-reset{
+    text-decoration: none;
+    color: inherit;
 }
 
 .custom-button {
@@ -111,15 +116,15 @@ svg {
 
 .custom-button .catalog-icon {
     background-image: url('../elements/icons/icon-catalogo.svg');
-    width: 16px;
-    height: 16px;
+    width: 24px;
+    height: 24px;
 }
 
 /* ---------------------------------------- */
 
 /* NAVBAR */
 
-.navbar {
+.navbar{
     width: 5rem;
     height: 100vh;
     position: fixed;
@@ -128,7 +133,7 @@ svg {
     z-index: 999;
 }
 
-.navbar-nav {
+.navbar-nav{
     list-style: none;
     padding: 0;
     margin: 0;
@@ -139,7 +144,7 @@ svg {
     margin-bottom: auto;
 }
 
-.logo {
+.logo{
     margin-bottom: 1.5rem;
     width: 100%;
 }
@@ -148,43 +153,43 @@ svg {
     cursor: default;
 }
 
-.logo img {
+.logo img{
     width: 80px;
     height: 80px;
 }
 
-.logo-text {
+.logo-text{
     text-transform: uppercase;
     font-weight: bold;
     font-size: 2rem;
     text-wrap: nowrap;
 }
 
-.nav-item {
+.nav-item{
     width: 100%;
     height: 100%;
     padding: 0.5rem 0;
     transition: all 0.15s ease-in-out;
 }
 
-.nav-link {
+.nav-link{
     display: flex;
     align-items: center;
 }
 
-.link-text {
+.link-text{
     display: none;
     font-size: 1.25rem;
     color: var(--Branco);
 }
 
-.toggle-nav {
+.toggle-nav{
     display: none;
 }
 
 /* UTILITY-BAR */
 
-.utility-container {
+.utility-container{
     width: 100%;
     padding-left: clamp(4px, 10vw, 480px); /* 384px + 5rem da navbar + 8px de padding */
     padding-right: clamp(4px, 10vw, 384px);
@@ -192,7 +197,7 @@ svg {
     transition: all 0.3s ease;
 }
 
-.utility-bar {
+.utility-bar{
     width: 100%;
     display: flex;
     justify-content: center;
@@ -201,7 +206,7 @@ svg {
     color: var(--Branco);
 }
 
-.promo-bar {
+.promo-bar{
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -212,27 +217,28 @@ svg {
     border-bottom: 1px solid var(--Branco);
 }
 
-.coupon {
+.coupon{
     font-weight: bold;
     font-size: 1.25rem;
     text-wrap: nowrap;
-    overflow-x: scroll;
+    overflow-x: auto;
 }
 
-.utilities {
+.utilities{
     display: flex;
     justify-content: space-between;
     align-items: center;
     width: 100%;
+    gap: 1rem;
 }
 
-.search-bar {
+.search-bar{
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
 
-.search-btn {
+.search-btn{
     display: flex;
     justify-content: center;
     align-items: center;
@@ -242,20 +248,26 @@ svg {
     border: none;
 }
 
-.search-btn:hover {
+.search-btn:hover{
     cursor: pointer;
 }
 
-.search-input {
+.search-input{
     background-color: var(--Branco);
     border: none;
 }
 
-.utility-icons {
+.utility-icons{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    gap: 1rem;
+    gap: 1.5rem;
+}
+
+.icon-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 /*FOOTER*/
@@ -472,6 +484,10 @@ svg {
         font-size: 0.875rem;
     }
 
+    .utilities{
+        gap: 0.5rem;
+    }
+
     .utility-icons svg {
         width: 28px;
         height: 28px;
@@ -480,7 +496,7 @@ svg {
 
 @media (max-width: 335px) {
     .utility-icons {
-        gap: 0;
+        gap: 4px;
     }
 }
 
