--- a/src/css/universal.css
+++ b/src/css/universal.css
@@ -44,6 +44,7 @@
 }
 
 body {
+    position: relative;
     background-color: var(--Fundo);
     color: var(--Preto);
     font-family: 'Century Gothic', sans-serif;
@@ -261,13 +262,140 @@ svg {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    gap: 1.5rem;
+    gap: 1rem;
 }
 
 .icon-container{
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.cart-icon{
+    position: relative;
+}
+
+.cart-icon-counter{
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    font-size: 0.75rem;
+    top: 50%;
+    right: -10px;
+    border-radius: 100%;
+    height: 1.25rem;
+    width: 1.25rem;
+    background-color: var(--Laranja);
+    color: var(--Branco);
+}
+
+/* CARRINHO REDUZIDO */
+
+.cartTab{
+    position: absolute;
+    width: 400px;
+    /* background-color: #353432; */
+    background-color: var(--Fundo);
+    box-shadow: -4px 0 10px rgba(0, 0, 0, 25%);
+    color: var(--Preto);
+    position: fixed;
+    top: 0;
+    right: -400px;
+    bottom: 0;
+    display: grid;
+    grid-template-rows: 70px 1fr 70px;
+    transition: .5s;
+    z-index: 999;
+}
+body.showCart .cartTab{
+    right: 0;
+}
+.icon-cart{
+    position: relative;
+    cursor: pointer;
+}
+.icon-cart span{
+    position: absolute;
+    background-color: var(--Fundo);
+    width: 24px;
+    height: 24px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+    color: #000;
+    top: 40%;
+    left: -10px;
+}
+.cartTab h1{
+    padding: 20px;
+    margin: 0;
+    font-weight: 300;
+    color: var(--Preto);
+    font-size: 1.5rem;
+    text-align: center;
+}
+.quantity span:not(.totalQuantity){
+    background-color: var(--Laranja) !important;
+    color: var(--Branco) !important;
+}
+.minus, .plus{
+    user-select: none; /* Para navegadores modernos */
+    -webkit-user-select: none; /* Safari/Chrome */
+    -ms-user-select: none; /* Internet Explorer/Edge */
+}
+.cartTab .btn{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+}
+.cartTab button{
+    background-color: var(--Oliva);
+    color: var(--Branco);
+    border: none;
+    font-weight: 500;
+    cursor: pointer;
+}
+.cartTab .close{
+    background-color: var(--VermelhoVibrante);
+    color: var(--Branco);
+}
+.listCart .item img{
+    width: 100%;
+}
+.listCart .item{
+    display: grid;
+    grid-template-columns: 70px 150px 60px 1fr;
+    gap: 10px;
+    text-align: center;
+    align-items: center;
+}
+.totalPrice{
+    text-wrap: nowrap;
+}
+.listCart .quantity span{
+    display: inline-block;
+    width: 25px;
+    height: 25px;
+    background-color: var(--Fundo);
+    border-radius: 50%;
+    color: #555;
+    cursor: pointer;
+}
+.listCart .quantity span:nth-child(2){
+    background-color: transparent;
+    color: var(--Preto);
+    cursor: auto;
+}
+.listCart .item:nth-child(even){
+    background-color: var(--Creme);
+}
+.listCart{
+    overflow: auto;
+}
+.listCart::-webkit-scrollbar{
+    width: 0;
 }
 
 /*FOOTER*/
@@ -477,7 +605,7 @@ svg {
 
     .utility-container {
         padding-left: 10vw;
-        padding-right: 0.5rem;
+        padding-right: 1rem;
     }
 
     .coupon {
@@ -491,6 +619,11 @@ svg {
     .utility-icons svg {
         width: 28px;
         height: 28px;
+    }
+
+    .cartTab{
+        width: 100%;
+        right: -100%;
     }
 }
 
